zeit.vgwort changes
===================

0.2.1 (unreleased)
------------------

- Consume less memory during the actual report to VGWort.
- Report all (otherwise applicable) documents, not only currently published
  ones (#9022).


0.2.0 (2010-07-07)
------------------

- Cronjob to automatically order new tokens (#7326).
- Cronjob to automatically report documents (#7216).
- UI to view reporting results (#7546)


0.1.0 (2010-05-17)
------------------

* first release