@@ -23,7 +23,8 @@ product_config = """
 
 
 ZCMLLayer = zeit.cms.testing.ZCMLLayer(
-    'ftesting-mock.zcml', product_config=product_config)
+    'ftesting-mock.zcml',
+    product_config=zeit.cms.testing.cms_product_config + product_config)
 
 
 SOAPLayer = zeit.cms.testing.ZCMLLayer(
